@@ -4,8 +4,8 @@ SUBDIRS= t
 
 perldir = @PERLPATH@/EBox/Event/Watcher
 
-nobase_perl_DATA = Base.pm DiskFreeSpace.pm Log.pm Runit.pm \
-	State.pm
+nobase_perl_DATA = Base.pm DiskFreeSpace.pm Log.pm RAID.pm \
+	Runit.pm State.pm
 
 SOURCES = $(nobase_perl_DATA)
 
